BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Stakeholder_Clinical_Trial_vod__c.object
<CustomObject>
    <description>Clinical Trial participant information</description>
    <fields>
        <fullName>Account_Id_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Account</description>
        <label>Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Clinical Trials</relationshipLabel>
        <relationshipName>Account_Clinical_Trials_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Clinical Trial</description>
        <label>Clinical Trial</label>
        <referenceTo>Clinical_Trial__c</referenceTo>
        <relationshipLabel>Account Clinical Trials</relationshipLabel>
        <relationshipName>Account_Clinical_Trials_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Participant_vod__c</fullName>
        <description>User associated with Clinical Trial</description>
        <label>Participant</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_vod__c</fullName>
        <description>Users role associated with Clinical Trial</description>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Investigator_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Study_Chair_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Clinical Trial</label>
    <nameField>
        <displayFormat>ACT-{00000}</displayFormat>
        <label>Account Clinical Trial Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Clinical Trials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>